--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,13 @@ jobs:
   test:
     strategy:
       matrix:
+        os: [windows-latest]
         python-version: [ 3.10.4 ]
-    runs-on: windows-latest
+        include:
+          - os: ubuntu-latest
+          - python-version: 3.8.x
+
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
