--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
         python-version: [ 3.10.4 ]
         include:
           - os: ubuntu-latest
-          - python-version: 3.8.x
+            python-version: 3.8.x
 
     runs-on: ${{ matrix.os }}
     steps:
